k8s/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-mesh
spec:
  hosts:
    - "gateway.istio.io"
  gateways:
    - service-mesh-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: service-mesh-gateway
            port:
              number: 8082
